# shadow

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  GUIDE.md  LICENSE  README.md  fly.toml  justfile  package.json  technical_explanation.md  tsconfig.json
.agent/workflows/: deploy.md
app/: .env.local.example  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
app/public/: smt_exclusion.json  token_holder.json
app/src/api/: relayer.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: CircuitSelector.tsx  ErrorBoundary.tsx  FaucetModal.tsx  GitHubStarButton.tsx  LiquidityModal.tsx  (+6 more)
circuits/min_balance/: Nargo.toml  Prover.toml
circuits/shielded_spend/: Nargo.toml  Prover.toml
circuits/smt_exclusion/: Nargo.toml  Prover.toml
circuits/token_holder/: Prover.toml
programs/zkgate/: Cargo.toml
programs/zkgate/src/: contexts.rs  errors.rs  lib.rs  math.rs  state.rs
programs/zkgate/src/instructions/: mod.rs  shielded_pool.rs  swap.rs
programs/zkgate/src/state/: roots.rs  shielded.rs
scripts/: add-liquidity.ts  airdrop-tokens.ts  create-pool.ts  deploy.sh  fund-user.ts  init-pool.ts  redeploy_shielded_verifier.sh  redeploy_verifier.sh  setup.sh  test-swap.ts  update-shielded-root.ts
tests/: zkgate.ts
zkgate-dex/: .gitignore  Anchor.toml  GUIDE.md  README.md  justfile  package-lock.json  package.json
zkgate-dex/app/: .env.local.example  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
zkgate-dex/scripts/: add-liquidity.ts  create-pool.ts  deploy.sh  wallet-setup.sh
(+90 files in other folders)
