[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Pin blake3 to a version compatible with rustc 1.84 (edition 2021)
[workspace.dependencies]
blake3 = "1.5"

[patch.crates-io]
# blake3 1.8.3 requires Rust edition 2024 which Solana BPF toolchain doesn't support yet
blake3 = { version = "1.5", git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.5.5" }

